# qt_NoGo

./: CMakeLists.txt  README.md  bg_c  item.cpp  item.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  msgthread.cpp  msgthread.h  resource.qrc  socketthread.cpp  socketthread.h  w
